--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,9 @@
         /*网站样式*/
         a{color:#333;}
         .container{
-            width: 1440px;margin:40px auto;
+            width: 1640px;margin:40px auto;
             padding-bottom:30px;
+            background:#fff!important;
         }
         aside{width:215px;float: left}
         .logo{font-size:34px;text-align:center}
@@ -116,7 +117,7 @@
     </style>
 </head>
 <body>
-<div class="wrapper">
+
     <div class="container">
         <aside>
             <h1 class="logo"><a href="https://wike2019.github.io/wike-blog">WIKE 小站</a></h1>
