--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
         .container{
             padding-bottom:30px;
             background:#fff!important;
+            overflow: hidden;
         }
         aside{width:215px;float: left}
         .logo{font-size:34px;text-align:center}
@@ -59,7 +60,7 @@
         .hot_tag li{border:1px solid #ccc;display:inline-block;padding:5px 8px;margin:5px 3px;cursor: pointer}
 
 
-        .main_list,.main_detail,.main_down_list,.main_project_list,.main_code_list,.main_collect_list{margin-left:250px}
+        .main_list,.main_detail,.main_down_list,.main_project_list,.main_code_list,.main_collect_list{margin-left:300px;padding-left:15px;border-left:1px solid #aaa}
         .article_item{margin-bottom:30px;border-bottom:1px solid #eee;padding-bottom:15px}
         .article_item h3{text-align: center;font-size:28px;font-weight:500 }
         .article_item>.info{text-align:center;color:#bbbbbb;margin:10px}
