--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -161,6 +161,9 @@
             <h2 class="title">
                 <a href="http://resume.ng2-oa.com/">个人简历</a>
             </h2>
+            <ul class="firend_link">
+                <a href="http://resume.ng2-oa.com/">点击查看</a>
+            </ul>
         </aside>
         <main class="main_detail">
             {{ content }}
