--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,18 @@
             background:#fff!important;
         }
 
+        @media screen and (max-width: 375px) {
+            aside {
+                width:100%!important;
+                margin-left:0!important;
+            }
+            .main_detail{
+                width:100%!important;
+                margin-left:0!important;
+                padding:0!important;
+                border:0!important;
+            }
+        }
         /*网站样式*/
         a{color:#333;}
         .container{
