--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
             background:#fff!important;
         }
 
-        @media screen and (max-width: 375px) {
+        @media screen and (min-width: 750px) {
             aside {
                 width:100%!important;
                 margin-left:0!important;
