--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,11 @@
             background:#fff!important;
         }
 
-        @media screen and (min-width: 750px) {
+        @media screen and (max-width: 750px) {
             aside {
                 width:100%!important;
                 margin-left:0!important;
+                float: none!important;
             }
             .main_detail{
                 width:100%!important;
