--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
         }
 
         @media screen and (max-width: 750px) {
+            body{
+                padding:5px;
+            }
             aside {
                 width:100%!important;
                 margin-left:0!important;
