--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
             .main_detail{
                 width:100%!important;
                 margin-left:0!important;
-                padding:0!important;
+                padding:10px!important;
                 border:0!important;
             }
         }
