--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
         @media screen and (max-width: 750px) {
             body{
-                padding:5px;
+                padding:5px!important;
             }
             aside {
                 width:100%!important;
