--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
         }
 
         @media screen and (max-width: 750px) {
+            .container{
+                overflow:auto!important;
+            }
             body{
                 padding:5px!important;
             }
@@ -25,6 +28,13 @@
                 width:100%!important;
                 margin-left:0!important;
                 float: none!important;
+            }
+            p img{
+                max-width:100%!important;
+            }
+            .language-plaintext{
+                width:90%!important;
+                margin: auto!important;
             }
             .main_detail{
                 width:100%!important;
