--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -190,6 +190,12 @@
             <ul class="firend_link">
                 <a href="http://resume.ng2-oa.com/">点击查看</a>
             </ul>
+            <h2 class="title">
+                <a href="https://github.com/wike2019/">开源项目</a>
+            </h2>
+            <ul class="firend_link">
+                <a href="https://github.com/wike2019/">点击查看</a>
+            </ul>
         </aside>
         <main class="main_detail">
             {{ content }}
