--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,10 +76,10 @@
         .hot_article .box_article{margin-left:80px;line-height:2;font-size:12px}
         .hot_article  time{font-weight:300;margin-top:5px}
 
-        .firend_link{margin-top:30px;overflow:hidden;margin-bottom:20px}
-        .firend_link li{float:left;margin:5px 8px }
+        .friend_link{margin-top:30px;overflow:hidden;margin-bottom:20px}
+        .friend_link li{margin:5px 8px }
 
-        .firend_link li a{color:#333;font-size: 15px}
+        .friend_link li a{color:#333;font-size: 15px}
 
 
         .hot_tag{margin-top:25px;overflow: hidden}
@@ -108,39 +108,18 @@
         .pay_info img{width:300px}
 
         .main_down_list h2,.main_project_list h2,.main_code_list h2,.main_collect_list h2{font-size:26px;margin-bottom:20px;margin-left:20px}
-        .download_item h3{font-size:14px;margin-bottom:10px}
-        .download_item{box-shadow:1px 1px 10px rgba(0,0,0,0.2);width:300px;padding:25px;display: inline-block;margin:20px}
-        .download_item p{line-height:2;margin-bottom:20px;width:100%;height:50px;overflow: hidden}
-        .download_href{border:1px dashed #ccc;color:#000;padding:5px 10px;border-radius:5px;}
 
 
-        .project_item,.collect_item{margin:20px;border-bottom:1px dashed #eee;padding:20px 5px;color:#111;cursor: pointer}
-        .project_item h3,.collect_item h3,.main_detail h3{font-size:16px;}
-        .project_item h3 span:first-child,.main_detail h3 span:first-child{margin-left:15px}
-        .project_item h3 span,.main_detail h3 span{background:#ddd;padding:2px 10px;margin:0 6px;font-size:12px;border-radius:5px}
-        .project_item p{line-height:1.6;margin:20px 5px 10px 5px}
+
 
         .project_item a{color:#333;}
-        .address_info{color:#333;display: block;font-weight: bold;margin-left:5px}
-        .address_info a{padding-left:5px}
 
-        .code_list{margin:5px 20px;width:100%;cursor: pointer;}
-        .code_list th{background:#555;color:#fff;border: none;line-height:2;font-size:14px}
-        .code_list td{font-size:12px;text-align:center;line-height:2;padding:5px 0}
-        .code_list tr:nth-child(2n){background:#eee}
-        .code_list td{border-bottom:1px solid #ccc}
-        .main_code_list .search{margin:20px;width:100%}
 
-        .collect_item{box-shadow:1px 1px 10px rgba(0,0,0,0.2);padding:30px 20px}
-        .collect_item p{line-height:2;margin:10px 2px}
-        .collect_item  a{color:#111
-        }
-        .main_detail h3{margin-left:20px;margin-bottom:10px;border-bottom:1px #bbbbbb dashed;line-height:2.5;padding-bottom:10px}
 
         .github h4{font-size:14px;margin-left:22px;margin-top:10px;margin-bottom:15px}
         .github a{display: block;font-weight:bold;color:#333;margin-left:22px;margin-top:10px;margin-bottom:15px}
 
-        .pre{white-space: pre-line;line-height:1.6;margin:20px;font-size:14px}
+        .pre{white-space: pre-line;line-height:1.6;margin:15px;font-size:14px}
 
         .main_title{font-size:26px;text-align: center;line-height: 2;margin-bottom:10px;}
     </style>
@@ -179,7 +158,7 @@
             <h2 class="title">
                 <span>友情链接</span>
             </h2>
-            <ul class="firend_link">
+            <ul class="friend_link">
                 <li><a href="">前端视角</a></li>
                 <li><a href="">木马TC个人博客</a></li>
                 <li><a href="">云计算</a></li>
@@ -187,14 +166,16 @@
             <h2 class="title">
                 <a href="http://resume.ng2-oa.com/">个人简历</a>
             </h2>
-            <ul class="firend_link">
-                <a href="http://resume.ng2-oa.com/">点击查看</a>
+            <ul class="friend_link">
+                <li><a href="http://resume.ng2-oa.com/">点击查看</a></li>
             </ul>
             <h2 class="title">
                 <a href="https://github.com/wike2019/">开源项目</a>
             </h2>
-            <ul class="firend_link">
-                <a href="https://github.com/wike2019/">点击查看</a>
+            <ul class="friend_link">
+                <li><a href="https://github.com/wike2019/k8s-wike">k8s可视化系统</a></li>
+                <li><a href="https://github.com/wike2019/web-hey">在线压测工具</a></li>
+                <li><a href="https://github.com/wike2019/mdEditor">markdown编辑器</a></li>
             </ul>
         </aside>
         <main class="main_detail">
